--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -447,3 +447,22 @@ width: 100%;
     font-size: 14px;
     border-radius: 5px;
 }
+
+.delete-link {
+    border: 1px solid black;
+    padding: 5px;
+    border-radius: 5px;
+    display: inline-flex;
+    align-items: center;
+    text-decoration: none;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.delete-link i {
+    margin-right: 5px;
+}
+
+.delete-link:hover {
+    background-color: #f0f0f0;
+    color: #1e1915;
+}
