--- a/views/book_details.ejs
+++ b/views/book_details.ejs
@@ -519,11 +519,18 @@ commentLinks.forEach(function(commentLink) {
             if (data.success) {
                 var commentElement = document.querySelector(`[data-comment-id="${commentId}"]`).closest('.comment-container');
                 commentElement.remove();
+                updateCommentCount();
                 console.log("Comment deleted successfully");
             } else {
                 console.error('Failed to delete comment');
             }
         })
         .catch(error => console.error('Error deleting comment:', error));
+    }
+
+    function updateCommentCount() {
+        var commentCountElement = document.querySelector('.comment-count');
+        var currentCount = parseInt(commentCountElement.innerText);
+        commentCountElement.innerText = currentCount - 1;
     }
 </script>
