--- a/views/book_details.ejs
+++ b/views/book_details.ejs
@@ -145,7 +145,8 @@
                                 <div class="row">
                                     <div class="col-12">
                                         <div class="row">
-                                            <% review.comments.forEach(comment => { %>
+                                            
+                                            <% review.comments.slice(0, 5).forEach(comment => { %>
                                             <div class="col-12 mb-3 comment-container">
                                                 <div class="row">
                                                     <div class="col-lg-1 col-md-2 col-1 mt-2">
